@@ -57,6 +57,7 @@ public abstract class DHXEC extends KeyExchange{
   protected String curve_name;
   protected int key_len;
 
+  @Override
   public void init(Session session,
 		   byte[] V_S, byte[] V_C, byte[] I_S, byte[] I_C) throws Exception{
     this.session=session;
@@ -66,8 +67,8 @@ public abstract class DHXEC extends KeyExchange{
     this.I_C=I_C;      
 
     try{
-      Class c=Class.forName(session.getConfig(sha_name));
-      sha=(HASH)(c.newInstance());
+      Class<?> c=Class.forName(session.getConfig(sha_name));
+      sha=(HASH)(c.getDeclaredConstructor().newInstance());
       sha.init();
     }
     catch(Exception e){
@@ -81,17 +82,15 @@ public abstract class DHXEC extends KeyExchange{
     buf.putByte((byte)SSH_MSG_KEX_ECDH_INIT);
 
     try{
-      Class c=Class.forName(session.getConfig("xdh"));
-      xdh=(XDH)(c.newInstance());
+      Class<?> c=Class.forName(session.getConfig("xdh"));
+      xdh=(XDH)(c.getDeclaredConstructor().newInstance());
       xdh.init(curve_name, key_len);
 
       Q_C = xdh.getQ();
       buf.putString(Q_C);
     }
     catch(Exception e){
-      if(e instanceof Throwable)
-        throw new JSchException(e.toString(), (Throwable)e);
-      throw new JSchException(e.toString());
+      throw new JSchException(e.toString(), e);
     }
 
     if(V_S==null){  // This is a really ugly hack for Session.checkKexes ;-(
@@ -110,6 +109,7 @@ public abstract class DHXEC extends KeyExchange{
     state=SSH_MSG_KEX_ECDH_REPLY;
   }
 
+  @Override
   public boolean next(Buffer _buf) throws Exception{
     int i,j;
     switch(state){
@@ -200,5 +200,6 @@ public abstract class DHXEC extends KeyExchange{
     return false;
   }
 
+  @Override
   public int getState(){return state; }
 }
