@@ -143,15 +143,15 @@ public abstract class KeyExchange{
       }
     }
 
-    Class _s2cclazz=Class.forName(session.getConfig(guess[PROPOSAL_ENC_ALGS_STOC]));
-    Cipher _s2ccipher=(Cipher)(_s2cclazz.newInstance());
+    Class<?> _s2cclazz=Class.forName(session.getConfig(guess[PROPOSAL_ENC_ALGS_STOC]));
+    Cipher _s2ccipher=(Cipher)(_s2cclazz.getDeclaredConstructor().newInstance());
     boolean _s2cAEAD=_s2ccipher.isAEAD();
     if(_s2cAEAD){
       guess[PROPOSAL_MAC_ALGS_STOC]=null;
     }
 
-    Class _c2sclazz=Class.forName(session.getConfig(guess[PROPOSAL_ENC_ALGS_CTOS]));
-    Cipher _c2scipher=(Cipher)(_c2sclazz.newInstance());
+    Class<?> _c2sclazz=Class.forName(session.getConfig(guess[PROPOSAL_ENC_ALGS_CTOS]));
+    Cipher _c2scipher=(Cipher)(_c2sclazz.getDeclaredConstructor().newInstance());
     boolean _c2sAEAD=_c2scipher.isAEAD();
     if(_c2sAEAD){
       guess[PROPOSAL_MAC_ALGS_CTOS]=null;
@@ -181,8 +181,8 @@ public abstract class KeyExchange{
     HASH hash=null;
     try{
       String _c=session.getConfig("FingerprintHash").toLowerCase();
-      Class c=Class.forName(session.getConfig(_c));
-      hash=(HASH)(c.newInstance());
+      Class<?> c=Class.forName(session.getConfig(_c));
+      hash=(HASH)(c.getDeclaredConstructor().newInstance());
     }
     catch(Exception e){ System.err.println("getFingerPrint: "+e); }
     return Util.getFingerPrint(hash, getHostKey(), true, false);
@@ -237,8 +237,8 @@ public abstract class KeyExchange{
       Buffer buf=new Buffer(sig_of_H);
       String foo=Util.byte2str(buf.getString());
       try{
-        Class c=Class.forName(session.getConfig(foo));
-        sig=(SignatureRSA)(c.newInstance());
+        Class<?> c=Class.forName(session.getConfig(foo));
+        sig=(SignatureRSA)(c.getDeclaredConstructor().newInstance());
         sig.init();
       }
       catch(Exception e){
@@ -282,8 +282,8 @@ public abstract class KeyExchange{
 
       SignatureDSA sig=null;
       try{
-        Class c=Class.forName(session.getConfig("signature.dss"));
-        sig=(SignatureDSA)(c.newInstance());
+        Class<?> c=Class.forName(session.getConfig("signature.dss"));
+        sig=(SignatureDSA)(c.getDeclaredConstructor().newInstance());
         sig.init();
       }
       catch(Exception e){
@@ -324,8 +324,8 @@ public abstract class KeyExchange{
 
       SignatureECDSA sig=null;
       try{
-        Class c=Class.forName(session.getConfig(alg));
-        sig=(SignatureECDSA)(c.newInstance());
+        Class<?> c=Class.forName(session.getConfig(alg));
+        sig=(SignatureECDSA)(c.getDeclaredConstructor().newInstance());
         sig.init();
       }
       catch(Exception e){
@@ -357,8 +357,8 @@ public abstract class KeyExchange{
 
       SignatureEdDSA sig=null;
       try{
-        Class c=Class.forName(session.getConfig(alg));
-        sig=(SignatureEdDSA)(c.newInstance());
+        Class<?> c=Class.forName(session.getConfig(alg));
+        sig=(SignatureEdDSA)(c.getDeclaredConstructor().newInstance());
         sig.init();
       }
       catch(Exception e){
