@@ -29,6 +29,8 @@ EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 package com.jcraft.jsch;
 
+import java.math.BigInteger;
+
 public class KeyPairDSA extends KeyPair{
   private byte[] P_array;
   private byte[] Q_array;
@@ -56,14 +58,15 @@ public class KeyPairDSA extends KeyPair{
     this.pub_array = pub_array;
     this.prv_array = prv_array;
     if(P_array!=null)
-      key_size = (new java.math.BigInteger(P_array)).bitLength();
+      key_size = (new BigInteger(P_array)).bitLength();
   }
 
+  @Override
   void generate(int key_size) throws JSchException{
     this.key_size=key_size;
     try{
-      Class c=Class.forName(jsch.getConfig("keypairgen.dsa"));
-      KeyPairGenDSA keypairgen=(KeyPairGenDSA)(c.newInstance());
+      Class<?> c=Class.forName(JSch.getConfig("keypairgen.dsa"));
+      KeyPairGenDSA keypairgen=(KeyPairGenDSA)(c.getDeclaredConstructor().newInstance());
       keypairgen.init(key_size);
       P_array=keypairgen.getP();
       Q_array=keypairgen.getQ();
@@ -75,18 +78,19 @@ public class KeyPairDSA extends KeyPair{
     }
     catch(Exception e){
       //System.err.println("KeyPairDSA: "+e);
-      if(e instanceof Throwable)
-        throw new JSchException(e.toString(), (Throwable)e);
-      throw new JSchException(e.toString());
+      throw new JSchException(e.toString(), e);
     }
   }
 
   private static final byte[] begin=Util.str2byte("-----BEGIN DSA PRIVATE KEY-----");
   private static final byte[] end=Util.str2byte("-----END DSA PRIVATE KEY-----");
 
+  @Override
   byte[] getBegin(){ return begin; }
+  @Override
   byte[] getEnd(){ return end; }
 
+  @Override
   byte[] getPrivateKey(){
     int content=
       1+countLength(1) + 1 +                           // INTEGER
@@ -111,6 +115,7 @@ public class KeyPairDSA extends KeyPair{
     return plain;
   }
 
+  @Override
   boolean parse(byte[] plain){
     try{
 
@@ -124,7 +129,7 @@ public class KeyPairDSA extends KeyPair{
 	  pub_array=buf.getMPIntBits();
 	  prv_array=buf.getMPIntBits();
           if(P_array!=null)
-            key_size = (new java.math.BigInteger(P_array)).bitLength();
+            key_size = (new BigInteger(P_array)).bitLength();
 	  return true;
 	}
 	return false;
@@ -162,7 +167,7 @@ public class KeyPairDSA extends KeyPair{
         pub_array=prvKEyBuffer.getMPInt();
         prv_array=prvKEyBuffer.getMPInt();
         publicKeyComment=Util.byte2str(prvKEyBuffer.getString());
-        //if(P_array!=null) key_size = (new java.math.BigInteger(P_array)).bitLength();
+        //if(P_array!=null) key_size = (new BigInteger(P_array)).bitLength();
         return true;
 
       }
@@ -238,7 +243,7 @@ public class KeyPairDSA extends KeyPair{
       index+=length;
 
       if(P_array!=null)
-        key_size = (new java.math.BigInteger(P_array)).bitLength();
+        key_size = (new BigInteger(P_array)).bitLength();
     }
     catch(Exception e){
       //System.err.println(e);
@@ -248,6 +253,7 @@ public class KeyPairDSA extends KeyPair{
     return true;
   }
 
+  @Override
   public byte[] getPublicKeyBlob(){
     byte[] foo=super.getPublicKeyBlob();
     if(foo!=null) return foo;
@@ -263,17 +269,21 @@ public class KeyPairDSA extends KeyPair{
   }
 
   private static final byte[] sshdss=Util.str2byte("ssh-dss");
+  @Override
   byte[] getKeyTypeName(){return sshdss;}
+  @Override
   public int getKeyType(){return DSA;}
 
+  @Override
   public int getKeySize(){
     return key_size;
   }
 
+  @Override
   public byte[] getSignature(byte[] data){
     try{
-      Class c=Class.forName((String)jsch.getConfig("signature.dss"));
-      SignatureDSA dsa=(SignatureDSA)(c.newInstance());
+      Class<?> c=Class.forName(JSch.getConfig("signature.dss"));
+      SignatureDSA dsa=(SignatureDSA)(c.getDeclaredConstructor().newInstance());
       dsa.init();
       dsa.setPrvKey(prv_array, P_array, Q_array, G_array);
 
@@ -290,14 +300,16 @@ public class KeyPairDSA extends KeyPair{
     return null;
   }
 
+  @Override
   public byte[] getSignature(byte[] data, String alg){
     return getSignature(data);
   }
 
+  @Override
   public Signature getVerifier(){
     try{
-      Class c=Class.forName((String)jsch.getConfig("signature.dss"));
-      SignatureDSA dsa=(SignatureDSA)(c.newInstance());
+      Class<?> c=Class.forName(JSch.getConfig("signature.dss"));
+      SignatureDSA dsa=(SignatureDSA)(c.getDeclaredConstructor().newInstance());
       dsa.init();
 
       if(pub_array == null && P_array == null && getPublicKeyBlob()!=null){
@@ -318,6 +330,7 @@ public class KeyPairDSA extends KeyPair{
     return null;
   }
 
+  @Override
   public Signature getVerifier(String alg){
     return getVerifier();
   }
@@ -334,11 +347,12 @@ public class KeyPairDSA extends KeyPair{
     KeyPairDSA kpair = new KeyPairDSA(jsch,
                                       P_array, Q_array, G_array,
                                       pub_array, prv_array);
-    kpair.publicKeyComment = new String(tmp[6]);
+    kpair.publicKeyComment = Util.byte2str(tmp[6]);
     kpair.vendor=VENDOR_OPENSSH;
     return kpair;
   }
 
+  @Override
   public byte[] forSSHAgent() throws JSchException {
     if(isEncrypted()){
       throw new JSchException("key is encrypted.");
@@ -356,6 +370,7 @@ public class KeyPairDSA extends KeyPair{
     return result;
   }
 
+  @Override
   public void dispose(){
     super.dispose();
     Util.bzero(prv_array);
